fixed register page

--- a/Project for App Domain/Views/Account/Register.cshtml
+++ b/Project for App Domain/Views/Account/Register.cshtml
@@ -78,7 +78,7 @@
             </div>
             <hr>
             <div>
-                @using (Html.BeginForm("SaveRegisterDetails", "Account"))
+                @using (Html.BeginForm("Register", "Account"))
                 {
                     <div style="color:red;">@Html.ValidationSummary()</div>
                     <div class="row">
