updated project to add some validation and Admin Controller and AdminViewModel

--- a/Project for App Domain/Views/ChartAccount/Index.cshtml
+++ b/Project for App Domain/Views/ChartAccount/Index.cshtml
@@ -23,7 +23,7 @@
         <th>
             @Html.DisplayNameFor(model => model.AccountDesc)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.NormalSide)
         </th>
         <th>
@@ -47,25 +47,25 @@
         <th>
             @Html.DisplayNameFor(model => model.DateCreated)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.UserId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Active)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.Order)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.Statement)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.Comment)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.UpdatedBy)
         </th>
-        <th>
+        <th style="display:none">
             @Html.DisplayNameFor(model => model.DateUpdated)
         </th>
         <th></th>
@@ -86,7 +86,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.AccountDesc)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.NormalSide)
             </td>
             <td>
@@ -110,25 +110,25 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.UserId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Active)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.Order)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.Statement)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.Comment)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.UpdatedBy)
             </td>
-            <td>
+            <td style="display:none">
                 @Html.DisplayFor(modelItem => item.DateUpdated)
             </td>
             <td>
