--- a/Project for App Domain/Content/bootstrap.css
+++ b/Project for App Domain/Content/bootstrap.css
@@ -4253,6 +4253,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar-header {
     float: left;
+    vertical-align: bottom;
   }
 }
 .navbar-collapse {
