--- a/Project for App Domain/Views/Account/Login.cshtml
+++ b/Project for App Domain/Views/Account/Login.cshtml
@@ -68,70 +68,64 @@
 
 
     <h2>@ViewBag.Title</h2>
-    <div class="row">
-        <div class="col-md-4">
-            <section id="loginForm">
-                <!-- @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        <h4>Use a local account to log in.</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.EditorFor(m => m.Password, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <div class="checkbox">
-                    @Html.CheckBoxFor(m => m.RememberMe)
-                    @Html.LabelFor(m => m.RememberMe)
+
+    <form id="frmRegister">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h1>Login</h1>
+                    <p>Please fill in this form to access your account.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="~/Content/Logo For App Domain small.png" alt="Flash Accounting Logo" style="padding:10px" />
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Log in" class="btn btn-default" />
+            <hr>
+            <div>
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    <div style="color:red;">@Html.ValidationSummary()</div>
+                    <div class="row">
+                        <!--Show details are saved successfully message-->
+                        <div class="col-lg-12">@ViewBag.Message</div>
+                    </div><br />
+                    <div class="row">
+                        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(m => m.Password, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <div class="checkbox">
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Log in" class="btn btn-default" />
+                        </div>
+                    </div>
+                    <p>
+                        @Html.ActionLink("Register as a new user", "Register")
+                    </p>
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>
+                }
             </div>
         </div>
-        <p>
-            @Html.ActionLink("Register as a new user", "Register")
-        </p>
-        @* Enable this once you have account confirmation enabled for password reset functionality
-    <p>
-        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-    </p>*@
-        } -->
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Username" style="width:200px; height: 30px;" required /><br><br>
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Password" style="width:200px; height: 30px;" required /><br><br>
-
-                <p><a href="/" class="btn btn-primary btn-lg">Login &raquo;</a></p>
-                
-            </section>
-
-            
-        </div>
-
-        <div class="col-md-4">
-            <section>
-                <img src="/Content/Logo For App Domain small.png" alt="Flash Accounting Logo" />
-            </section>
-        </div>
-        
-    </div>
+    </form>
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
