--- a/Project for App Domain/Views/Account/Register.cshtml
+++ b/Project for App Domain/Views/Account/Register.cshtml
@@ -65,7 +65,7 @@
 
     </div>
 
-    <form action="action_page", id="frmRegister">
+    <form id="frmRegister">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -129,11 +129,11 @@
             <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
             <!--<button type="submit" class="registerbtn">Register</button>-->
             @*<p><a href="/" class="btn btn-primary btn-lg">Create Account &raquo;</a></p>*@
-            <input type="button" value="Create" id="btnSubmit" class="btn btn-primary btn-lg" onclick="btnRegister_Click()" />
+            <input type="button" value="Create" id="btnSubmit" class="btn btn-primary btn-lg" />
         </div>
 
         <div class="container signin">
-            <p>Already have an account? <a href="https://localhost:44329/Account/Login">Sign in</a>.</p>
+            <p>Already have an account? <a href="https://localhost:55748/Account/Login">Sign in</a>.</p>
         </div>
     </form>
 
