--- a/Project for App Domain/Views/ChartAccount/Edit.cshtml
+++ b/Project for App Domain/Views/ChartAccount/Edit.cshtml
@@ -16,7 +16,7 @@
         <h4>ChartAccount</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" style="display:none;">
             @Html.LabelFor(model => model.AccountId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AccountId, new { htmlAttributes = new { @class = "form-control" } })
@@ -112,7 +112,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="display:none;">
             @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
@@ -154,7 +154,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="display:none;">
             @Html.LabelFor(model => model.UpdatedBy, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UpdatedBy, new { htmlAttributes = new { @class = "form-control" } })
@@ -162,7 +162,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="display:none;">
             @Html.LabelFor(model => model.DateUpdated, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateUpdated, new { htmlAttributes = new { @class = "form-control" } })
